# bare

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  check  libnull.rlib
.github/workflows/: rust.yml
doc/: bare.1.scd  bare.5.scd  check
src/: color.rs  config.rs  damage.rs  font.rs  init.rs  log.rs  main.rs  map.rs  raster.rs  render.rs  state.rs
src/blocks/: battery.rs  cpu.rs  mod.rs  time.rs  volume.rs  wireless.rs  workspaces.rs
src/wayland/: buffer.rs  mod.rs  output.rs  pointer.rs
