[package]
name = "bare"
version = "0.1.0"
edition = "2024"

[dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
memmap2 = "0.9"
fontdue = "0.9.3"
nix = { version = "0.31.2", features = ["fs"] }
calloop = "0.14"
calloop-wayland-source = "0.4"
time = { version = "0.3.47", features = ["local-offset"] }
