[package]
name = "bare"
version = "0.1.0"
edition = "2024"

[dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
memmap2 = "0.9"
fontdue = "0.9.3"
fontconfig = "0.10"
nix = { version = "0.31.2", features = ["fs", "net"] }
calloop = "0.14"
calloop-wayland-source = "0.4"
time = { version = "0.3.47", features = ["local-offset"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
pipewire = "0.9"
clap = { version = "4", features = ["derive"] }
neli-wifi = "0.6.1"
