[package]
name = "bare"
version = "0.3.0"
edition = "2024"

[dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
memmap2 = "0.9"
fontdue = "0.9.3"
fontconfig = "0.10"
nix = { version = "0.31.2", features = ["fs", "net"] }
calloop = "0.14"
calloop-wayland-source = "0.4"
tz-rs = "0.7.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
pipewire-native = "0.1.4"
pipewire-native-spa = "0.1.4"
clap = { version = "4", features = ["derive"] }
neli-wifi = "0.6.1"
